Add post: spatial data in R

--- a/content/post/2022-04-28-manipulacion-y-visualizacion-de-datos-espaciales-en-r/index.es.Rmd
+++ b/content/post/2022-04-28-manipulacion-y-visualizacion-de-datos-espaciales-en-r/index.es.Rmd
@@ -3,8 +3,16 @@ title: Manipulación y visualización de datos espaciales en R
 author: ''
 date: '2022-04-28'
 slug: manipulacion-y-visualizacion-de-datos-espaciales-en-r
-categories: []
-tags: []
+categories:
+  - R
+tags:
+  - R
+  - Data Science
+  - Statistic
+  - plot
+  - ggplot
+  - rspatial
+  - Spatial Analyst
 subtitle: ''
 summary: ''
 authors: []
